# AnkiVoice

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  uninstall.sh
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
deploy/: ankivoice.service
scripts/: warmup.py
specs/001-ankivoice-audio-decks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ankivoice-audio-decks/checklists/: requirements.md
specs/001-ankivoice-audio-decks/contracts/: bot-interface.md  module-interfaces.md
specs/002-quality-bugfix-perf/: PROGRESS.md  audit-notes.md  data-model.md  perf-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-quality-bugfix-perf/checklists/: requirements.md
specs/002-quality-bugfix-perf/contracts/: changes.md
specs/003-one-command-deploy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-one-command-deploy/checklists/: requirements.md
specs/003-one-command-deploy/contracts/: deploy-interface.md
src/ankivoice/: __main__.py  audio.py  bot.py  cleanup.py  config.py  delivery.py  errors.py  models.py  packaging.py  parser.py  pipeline.py  preflight.py  speech.py  store.py  worker.py
tests/: conftest.py
tests/deploy/: Dockerfile.systemd  conftest.py  run_container_e2e.sh  test_install_container.py  test_install_unit.py  test_systemd_unit.py  test_uninstall_unit.py  test_uv_sync_keeps_model.py
tests/fixtures/: sample_deck.txt
tests/integration/: test_bot_handlers.py  test_errors_e2e.py  test_main.py  test_pipeline_e2e.py  test_store_resume.py
tests/live/: test_live_kokoro_apkg.py
tests/unit/: test_audio.py  test_cleanup.py  test_config.py  test_delivery.py  test_models_errors.py  test_packaging.py  test_parser.py  test_pipeline.py  test_preflight.py  test_speech_wrapper.py  test_store.py  test_worker.py
