[project]
name = "ankivoice"
version = "0.1.0"
description = "Telegram bot that turns a text Anki deck into an audio-enhanced .apkg using local Kokoro-82M speech."
requires-python = ">=3.12,<3.13"
dependencies = [
    "genanki>=0.13.1",
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[ext]>=22.8",
    "soundfile>=0.14.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
