[project]
name = "ankivoice"
version = "0.1.0"
description = "Telegram bot that turns a text Anki deck into an audio-enhanced .apkg using local Kokoro-82M speech."
requires-python = ">=3.12,<3.13"
dependencies = [
    "genanki>=0.13.1",
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[ext]>=22.8",
    "soundfile>=0.14.0",
]

[project.scripts]
ankivoice = "ankivoice.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ankivoice"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-m 'not live' -ra"
markers = [
    "live: exercises the real Kokoro model and a real .apkg import; opt-in, deselected by default (run with -m live)",
]
